tests/expectations/compiler/structs/redefine_external_struct_fail.out
Error [ETYC0372003]: Expected type `parent.aleo/Foo` but type `child.aleo/Foo` was found
    --> compiler-test:29:16
     |
  29 |         return child.aleo/create();
     |                ^^^^^^^^^^^^^^^^^^^
